[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/General/ArrowShooter/ArrowShooter.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.046875, 0.0236263, 0.00311279, 1, 0.265625, 0.16394, 0.0332031, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 100

[node name="ArrowShooter" type="Node2D"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootPoint" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 10 )
texture = SubResource( 2 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
